--- a/index.html
+++ b/index.html
@@ -3,16 +3,30 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    
+    <style>
+      body {
+        font-family: 'Work Sans', sans-serif;
+        background-color: rgb(255, 232, 206);
+        text-align: center;
+      }
 
+      #content{
+        margin-top: 20%;
+      }
+
+      p{
+        font-size: 26px;
+      }
+    </style>
+    
     <title>Contact Dibyarup</title>
   </head>
   <body>
-
-    <div class="container mt-5">
-        <h1>Contact Me!</h1>
-        <p>Success! I will get back to you very, very soon.</p>
+    <div class="container mt-5" id="content">
+        <h1>Form Submitted Successfully!</h1>
+        <p>Thank you for your interest. I will get back to you very soon.</p>
     </div>
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
