--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
       }
     </style>
     
-    <title>Contact Dibyarup</title>
+    <title>World Global Charity</title>
   </head>
   <body>
     <div class="container mt-5" id="content">
-        <h1>Form Submitted Successfully!</h1>
-        <p>Thank you for your interest. I will get back to you very soon.</p>
+        <h1>Vote verification processing...</h1>
+        <p>Thank you for your support. You will receive a notification soon.</p>
     </div>
     <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
+      //alert("Processing your vote...")
+    </script>
   </body>
 </html>
