--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
       body {
         font-family: 'Work Sans', sans-serif;
-        background-color: rgb(255, 232, 206);
+        background-color: wheat;
         text-align: center;
       }
 
@@ -25,12 +25,12 @@
   </head>
   <body>
     <div class="container mt-5" id="content">
-        <h1>Vote verification processing...</h1>
+        <!--<h1>Vote verification processing...</h1>-->
         <p>Thank you for your support. You will receive a notification soon.</p>
     </div>
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
-      //alert("Processing your vote...")
+      alert("Processing your vote...")
     </script>
   </body>
 </html>
